2019-09-03      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  convert source build rules to use
          $(STAMP).  (gm2/gm2version.c) rewritten for $(STAMP).
          (gm2.pod) rewritten for $(STAMP).
          (gm2/gm2-libs.texi) rewritten for $(STAMP).
          (gm2/gm2-ebnf.texi) rewritten for $(STAMP).
          (gm2/SYSTEM-pim.texi) rewritten for $(STAMP).
          (gm2/SYSTEM-iso.texi) rewritten for $(STAMP).
          (gm2/Builtins.texi) rewritten for $(STAMP).
          (gm2/version.texi) rewritten for $(STAMP).
          (gm2/gm2-libs-boot/pthdummy.o) removed $(MCDEPS).

2019-09-02      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-gcc/m2expr.c:  (BuildDivFloorCheck) New function.
          (divFloorOverflowPosPos) New function.
          (divFloorOverflowNegNeg) New function.
          (divFloorOverflowNegPos) New function.
          (divFloorOverflowPosNeg) New function.
          (divFloorOverflowCases) New function.
          (checkWhileDivFloorOverflow) New function.
	  (checkWholeOverflow) call BuildDivFloorCheck.

2019-09-01      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/patches/gcc/trunk:  all patches recreated.

2019-08-31      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* testsuite/gm2/pim/run/pass/gm2.exp:  remove -fsoft-check-all.
	* gm2/gm2-gcc/m2expr.c:  (checkWholeModFloorOverflow) updated
          and tidied up comments now that BuildDivCeilCheck is
          implemented.  (Generally tidied up comments as per
          GCC coding standards).  (checkWholeDivCeilOverflow)
          check for rhs < 0 in ISO M2 which must raise an exception.
	* gm2/tools-src/def2texi.py:  utilize 2to3 to convert Python 2
	  into Python 3 code.

2019-08-29      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* Checking overflow/underflow for DIV_CEIL implemented.
	* gm2/gm2-compiler/M2Base.mod:  renamed the base types,
	  Z, R, C so that error messages are improved.