@@ -1,10 +1,0 @@
-#!/usr/bin/env python
-
-
-
-#
-#
-#
-
-def rgb (r, g, b):
-    
